# WebsiteCapture

./: README.md
src/: .gitignore  pyproject.toml
src/src/website_capture/: __init__.py  cli.py
