[project]
name = "website-capture"
version = "0.1.0"
description = "Prototype CLI for capturing Chrome-rendered web pages to PDF, screenshot, and Markdown."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "playwright>=1.45",
]

[project.scripts]
capture-url = "website_capture.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

